:bug: Renamed betrokkene to subject, added help texts and changed some fields to be not required.
